# ChangeLog for media-gfx/povray
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.72 2008/05/09 13:06:07 lavajoe Exp $

*povray-3.7.0_beta25-r1 (09 May 2008)

  09 May 2008; Joe Peterson <lavajoe@gentoo.org>
  +povray-3.7.0_beta25-r1.ebuild:
  Adjust locations of /usr/share files, docs, and config files

*povray-3.7.0_beta25 (04 Apr 2008)

  04 Apr 2008; Joe Peterson <lavajoe@gentoo.org>
  +povray-3.7.0_beta25.ebuild:
  Add 3.7.0 beta 25

  01 Nov 2007; Joe Peterson <lavajoe@gentoo.org> povray-3.6.1-r2.ebuild:
  Add ~x86-fbsd keyword

  06 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> povray-3.6.1-r2.ebuild:
  Use user CFLAGS, fix broken get-flag test that always returned true and
  striped -fomit-frame-pointer, fix quoting.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  povray-3.6.1-r1.ebuild, povray-3.6.1-r2.ebuild:
  Drop virtual/x11 references.

  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r2.ebuild:
  alpha stable wrt #16473

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  03 Apr 2007; Markus Ullmann <jokey@gentoo.org> povray-3.6.1-r1.ebuild,
  povray-3.6.1-r2.ebuild:
  Update SRC_URI as suggested in bug #173223

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r2.ebuild:
  ia64 stable wrt bug 169473

  10 Mar 2007; nixnut <nixnut@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on ppc wrt bug 169473

  10 Mar 2007; Timothy Redaelli <drizzt@gentoo.org> Manifest:
  Fix Manifest

  06 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  povray-3.6.1-r2.ebuild:
  Stable on sparc wrt #169473

  06 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on amd64, bug 169473.

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on ppc64; bug #169473

  06 Mar 2007; Jeroen Roovers <jer@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable for HPPA (bug #169473).
