@@ -2,9 +2,8 @@ AUX povray-3.6.1-configure.patch 1081 RMD160 92dd3995691d567f6ae24b38bea1f31b980
 AUX povray-3.6.1-find-egrep.patch 2463 RMD160 6af6c01daec1a0eb5ae27f65ede5411c4af2dbe2 SHA1 19537ff628130a4d2b048529e5a4f9bbfe79840c SHA256 1f56d1223954c1d0ed160b034badcf0878813b0bf984221c8eadce5d7666a46e
 DIST povray-3.6.1.tar.bz2 8200160 RMD160 84ba679da66089f192cc1bfcf8bdd498e736a9a3 SHA1 1fab3ccbdedafbf77e3a66087709bbdf60bc643d SHA256 4e8a7fecd44807343b6867e1f2440aa0e09613d6d69a7385ac48f4e5e7737a73
 DIST povray-src-3.7.0.beta.25b.tar.bz2 6890656 RMD160 37e8f6fb33bbc82d2ce6154a8b0c75ae7f5cda8e SHA1 0f55e441c97e88a4a8b148b7e7a328d1189a5ff9 SHA256 ef54965dec05c8063c40eab768f3fb722eb0ed72ae7918afe45d7a6bd553abc8
-EBUILD povray-3.6.1-r1.ebuild 1394 RMD160 3b840001acc9988e9344453c29e050d68b01fb1d SHA1 d4e1d3093d8f7aac8c70603d59090f13d7706b31 SHA256 b5679f1b6723c521e535f237825bb743c9ce0f4938878dc8727864aad8ea1370
 EBUILD povray-3.6.1-r2.ebuild 1507 RMD160 a19e644cee988e4fd08a9899488f724bb914f7fa SHA1 c0047a1dbb33e7ced8ba72db84e4ba0cc98eba62 SHA256 18b7040548f990c7df80da07deb14b58413c643b6e42d58425dc9ec70ce6de83
 EBUILD povray-3.7.0_beta25-r1.ebuild 2974 RMD160 539d28605d6434736fe786bf1fc9e02238289bf2 SHA1 266a4b5ffe405efe4de754aa4bf2c36ac9cee91d SHA256 afc7cc02992fdc41246e052d00b2cfa519302e443d527c92d5b3fefd9a2c10a8
 EBUILD povray-3.7.0_beta25.ebuild 1685 RMD160 48e1c55dcdf88c49a39b9a09edf68ffb5805be7a SHA1 8f92b1b55f7c0e14933f919ea5b691ada0d558af SHA256 2c8e9d9b23169d741effaafaa77c9c440277a7446993affcd835ccb0aad5f11e
-MISC ChangeLog 10629 RMD160 3f476ec35d288d28dd721a0b6ca9daef326b4340 SHA1 6b53a9a69b618fb1a5b58f61f045b22a35bd673f SHA256 28625f7648381536747e741cd5e4b25e81d1cc333a3233395042b7e85ee96ca2
+MISC ChangeLog 10717 RMD160 2f956d2305005637e6bc0f09d09cf49327a87e1a SHA1 83a5c2627357b36d507a7a24034b17dc3e7fea4c SHA256 b68f6a1a6abc798917709417245176788a30c9dd71da99a11ac01c0d6ce434e2
 MISC metadata.xml 223 RMD160 0c9c59654305e8789fe6c93fd07c561cfe003f54 SHA1 7904e6fb45104baf2cb67fb9886c633af4dc7056 SHA256 a24b49fe5448d4cb329acf1d8113ac30eb1d61d63a7319b66c077d3f1775d055
